5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1679_1880.log
== TEST (2019-05-02 02:44:38) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(var1==1):
	print(ja)
elif(var1==2):
	print(fe)
elif(var1==3):
	print(mr)
elif(var1==4):
	print(ab)
elif(var1==5):
	print(ma)
elif(var1==6):
	print(ju)
elif(var1==7):
	print(jl)
elif(var1==8):
	print(ag)
elif(var1==9):
	print(se)
elif(var1==10):
	print(ou)
elif(var1==11):
	print(no)
elif(var1==12):
	print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:44:45) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(var1==1):
	print(ja)
elif(var1==2):
	print(fe)
elif(var1==3):
	print(mr)
elif(var1==4):
	print(ab)
elif(var1==5):
	print(ma)
elif(var1==6):
	print(ju)
elif(var1==7):
	print(jl)
elif(var1==8):
	print(ag)
elif(var1==9):
	print(se)
elif(var1==10):
	print(ou)
elif(var1==11):
	print(no)
elif(var1==12):
	print(de)
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.196534
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:46:26) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
elif(var1==1):
	print(ja)
elif(var1==2):
	print(fe)
elif(var1==3):
	print(mr)
elif(var1==4):
	print(ab)
elif(var1==5):
	print(ma)
elif(var1==6):
	print(ju)
elif(var1==7):
	print(jl)
elif(var1==8):
	print(ag)
elif(var1==9):
	print(se)
elif(var1==10):
	print(ou)
elif(var1==11):
	print(no)
elif(var1==12):
	print(de)
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.152254
-- ERROR:
  File "/home/codebench/codes/1679/1880/main.py", line 16
    elif(var1==1):
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:46:26) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
elif(var1==1):
	print(ja)
elif(var1==2):
	print(fe)
elif(var1==3):
	print(mr)
elif(var1==4):
	print(ab)
elif(var1==5):
	print(ma)
elif(var1==6):
	print(ju)
elif(var1==7):
	print(jl)
elif(var1==8):
	print(ag)
elif(var1==9):
	print(se)
elif(var1==10):
	print(ou)
elif(var1==11):
	print(no)
elif(var1==12):
	print(de)
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 16
    elif(var1==1):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:47:42) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
if(var1==1):
	print(ja)
elif(var1==2):
	print(fe)
elif(var1==3):
	print(mr)
elif(var1==4):
	print(ab)
elif(var1==5):
	print(ma)
elif(var1==6):
	print(ju)
elif(var1==7):
	print(jl)
elif(var1==8):
	print(ag)
elif(var1==9):
	print(se)
elif(var1==10):
	print(ou)
elif(var1==11):
	print(no)
elif(var1==12):
	print(de)
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 16
    if(var1==1):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:48:54) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:49:00) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.116229
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:01) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:49:06) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.204684
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:07) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:09) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:12) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:15) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:18) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:21) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:23) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:26) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:29) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:32) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:36) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:40) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:49:52) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:50:52) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:50:55) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.17021
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:50:55) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:51:06) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))

ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.169023
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:51:37) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))

ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 and <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.160288
-- ERROR:
  File "/home/codebench/codes/1679/1880/main.py", line 16
    if(1 <= var1 and <= 12):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:51:38) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))

ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 and <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 16
    if(1 <= var1 and <= 12):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:52:05) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))

ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:52:12) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))

ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.204602
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:52:13) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))

ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:53:24) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))

ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:53:46) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))

ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 03:15:00) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.129801
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:15:01) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 03:15:10) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.130972
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:15:11) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:15:24) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 03:46:34) 
-- CODE:
var1 = int(input("Digite um numero de 1-12: "))
ja = "janeiro"
fe = "fevereiro"
mr = "marco"
ab = "abril"
ma = "maio"
ju = "junho"
jl = "julho"
ag = "agosto"
se = "setembro"
ou = "outubro"
no = "novembro"
de = "dezembro"

if(1 <= var1 <= 12):
	if(var1==1):
		print(ja)
	elif(var1==2):
		print(fe)
	elif(var1==3):
		print(mr)
	elif(var1==4):
		print(ab)
	elif(var1==5):
		print(ma)
	elif(var1==6):
		print(ju)
	elif(var1==7):
		print(jl)
	elif(var1==8):
		print(ag)
	elif(var1==9):
		print(se)
	elif(var1==10):
		print(ou)
	elif(var1==11):
		print(no)
	elif(var1==12):
		print(de)
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.150927
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
